<resources>
    <string name="app_name">Dual-WAN</string>
    <string name="btn_settings">Settings</string>
    <string name="settings_title">Bonding Settings</string>
    <string name="settings_server_host">Server Host</string>
    <string name="settings_server_port">Server Port</string>
    <string name="settings_insecure">Insecure (no TLS)</string>
    <string name="settings_save">Save</string>
    <string name="settings_test_connect">Test CONNECT via server</string>
</resources>
